force-app/main/default/objects/Fee__c/Fee__c.object-meta.xml
<CustomObject>
    <label>Fee</label>
    <nameField>
        <displayFormat>FEE-{00000}</displayFormat>
        <label>Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>