force-app/main/default/objects/Fee__c/fields/Amount_Home_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_Home_Currency__c</fullName>
    <label>Amount (Home Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>