force-app/main/default/objects/Fee__c/fields/Is_Refundable__c.field-meta.xml
<CustomField>
    <fullName>Is_Refundable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refundable</label>
    <type>Checkbox</type>
</CustomField>