force-app/main/default/objects/Fee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(NOT(ISBLANK(Paid_Date__c)), &apos;Paid&apos;, IF(AND(NOT(ISBLANK(Due_Date__c)), Due_Date__c &lt; TODAY()), &apos;Overdue&apos;, &apos;Due&apos;))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>